Fixed weird layout issues on small browser windows Fixes #26 (hopefully)

--- a/src/app/desktop/desktop-menu/desktop-menu.component.scss
+++ b/src/app/desktop/desktop-menu/desktop-menu.component.scss
@@ -1,4 +1,8 @@
 #desktop-menu {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
   display: flex;
   align-items: center;
   width: 100%;
